--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Git demo
-    
-    </h1>
+    <h1>Git demo</h1>
+    <p>hello</p>
 </body>
 </html>
